k8s/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-booking-deployment
  namespace: room-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-booking
  template:
    metadata:
      labels:
        app: room-booking
    spec:
      containers:
        - name: room-booking-backend
          image: agavevska/room-booking-backend:latest
          ports:
            - containerPort: 8080
        - name: room-booking-frontend
          image: agavevska/room-booking-frontend:latest
          ports:
            - containerPort: 3000
