k8s/app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-booking-backend
  namespace: room-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-booking-backend
  template:
    metadata:
      labels:
        app: room-booking-backend
    spec:
      containers:
        - name: backend
          image: agavevska/room-booking-backend:latest
          ports:
            - containerPort: 8080
