k8s/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-booking-frontend
  namespace: room-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-booking-frontend
  template:
    metadata:
      labels:
        app: room-booking-frontend
    spec:
      containers:
        - name: frontend
          image: agavevska/room-booking-frontend:latest
          ports:
            - containerPort: 3000
