k8s/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-booking-frontend-service
  namespace: room-booking
spec:
  selector:
    app: room-booking-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
